--- a/common/ipod/lilygo_tdisplay_ipod_battery.yaml
+++ b/common/ipod/lilygo_tdisplay_ipod_battery.yaml
@@ -1,10 +1,12 @@
+substitutions:
+  battery_pin: "34"
 sensor:
 ## Battery
   - platform: adc
-    pin: 34
+    pin: $battery_pin
     attenuation: 11db
     name: "vccadc"
-    update_interval: 250ms
+    update_interval: 500ms
     id: vcc_adc
     internal: true
     on_value:
