--- a/lilygos3.yaml
+++ b/lilygos3.yaml
@@ -1,65 +1,10 @@
 esphome:
   name: "lilygos3"
-  # on_boot: 
-  #   - priority: 600
-  #     then:
-  #       - lambda: |-
-  #           id(disp).tft.init();
-  #           id(disp).tft.setRotation(3);
-  #           setup_t tftSetup;
-  #           id(disp).tft.getSetup(tftSetup);            
-  #           id(TFT_eSPI_Version).publish_state(tftSetup.version.c_str());
-  #       - script.execute: DisplayStartupPage
-
-  libraries: 
-    - SPI
-    - FS
-    - SPIFFS
-    - TFT_eSPI
-
   platformio_options:
-    upload_speed: 921600
-    build_flags:
-      # The folowing defines will configure the TFT display driver, size and pins
-      - -DUSER_SETUP_LOADED=1 
-      - -DST7789_DRIVER=1 
-      - -DINIT_SEQUENCE_3=1 
-      - -DCGRAM_OFFSET
-      - -DTFT_RGB_ORDER=TFT_RGB 
-      - -DTFT_INVERSION_ON=1 
-      - -DTFT_PARALLEL_8_BIT=1 
-      - -DTFT_WIDTH=170 
-      - -DTFT_HEIGHT=320 
-      - -DTFT_DC=7 
-      - -DTFT_RST=5 
-      - -DTFT_WR=8 
-      - -DTFT_RD=9 
-      - -DTFT_D0=39 
-      - -DTFT_D1=40 
-      - -DTFT_D2=41 
-      - -DTFT_D3=42 
-      - -DTFT_D4=45 
-      - -DTFT_D5=46 
-      - -DTFT_D6=47 
-      - -DTFT_D7=48 
-      - -DLOAD_GLCD=1
-      - -DLOAD_FONT2=1 
-      - -DLOAD_FONT4=1 
-      - -DLOAD_FONT6=1 
-      - -DLOAD_FONT7=1 
-      - -DLOAD_FONT8=1 
-      - -DLOAD_GFXFF=1 
-      - -DSMOOTH_FONT=1
-      # If you don't care about control of the backlight you can uncomment the two lines below
-      # - -DTFT_BL=38
-      # - -DTFT_BACKLIGHT_ON=HIGH
-
-external_components:
-  - source:
-      type: git
-      url: https://github.com/bradmck/lilygo-tdisplays3-esphome.git
-      ref: main
-    components: [tdisplays3]
+    board_build.f_flash: 80000000L
+    board_upload.flash_size: 16MB
+    board_build.partitions: default_16MB.csv
+    board_build.arduino.memory_type: qio_opi
 
 esp32:
   board: esp32-s3-devkitc-1
@@ -72,23 +17,70 @@ logger:
 
 # Enable Home Assistant API
 api:
-  reboot_timeout: 0s
 
 ota:
-  password: "6ada29f6f41ce1685d29d406efd25fa4"
 
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-  use_address: 192.168.86.180
+
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "tdisplay-poc Fallback Hotspot"
+    ssid: "S3 Fallback Hotspot"
     password: "zQ9tuPKIfFMu"
-  
-time:
-  - platform: homeassistant
-    id: ha_time
+
+external_components:
+  - source:
+    #   type: git
+    #   url: https://github.com/landonr/homeThing
+    #   ref: main
+      type: local
+      path: ../homething/components
+    refresh: 0s
+    components: [homeThing]
+  - source:
+    #   type: git
+    #   url: https://github.com/landonr/esphome-components
+    #   ref: main
+    # refresh: 0s
+      type: local
+      path: ../local_components/components
+    refresh: 0s
+    components: [
+      homeassistant_component,
+      homeassistant_media_player,
+      media_player_source,
+      media_player_source_sonos,
+      media_player_source_spotify,
+      media_player_source_custom
+    ]
+  - source: github://landonr/lilygo-tdisplays3-esphome
+    components: [tdisplays3]
+
+packages:
+  device_base: !include ../homeThing/common/device_base.yaml
+  settings: !include ../homeThing/common/settings.yaml
+  home_media_player: !include ../homeThing/homeConfig/media_player.yaml
+  home_switch: !include ../homeThing/homeConfig/switch.yaml
+  fonts: !include ../homeThing/common/fonts.yaml
+  icon_fonts: !include ../homeThing/common/icon_fonts.yaml
+  ipod_control_binary_sensor: !include ../homeThing/common/ipod/lilygo_tdisplay_ipod_binary_sensor.yaml
+  ipod_control_rotary: !include ../homeThing/common/ipod/lilygo_tdisplay_ipod_rotary.yaml
+  ipod_control_battery: !include ../homeThing/common/ipod/lilygo_tdisplay_ipod_battery.yaml
+  ipod_control_sleep: !include ../homeThing/common/ipod/lilygo_tdisplay_ipod_sleep.yaml
+
+substitutions:
+  friendly_name: "s3 homething"
+  rotary_left_pin: "2"
+  rotary_right_pin: "10"
+  rotary_up_pin: "3"
+  rotary_down_pin: "1"
+  rotary_select_pin: "11"
+  rotary_pin_a: "13"
+  rotary_pin_b: "12"
+  screen_left_pin: "GPIO0"
+  screen_right_pin: "GPIO14"
+  battery_pin: "4"
 
 output:
   - platform: ledc
@@ -100,17 +92,124 @@ light:
   - platform: monochromatic
     output: gpio38
     name: "Backlight"
+    id: backlight
     restore_mode: RESTORE_DEFAULT_ON
-
-font:
-  - file: "gfonts://Roboto"
-    id: roboto
-    size: 30
+  - platform: homeassistant_component
+    id: light_desk_lamp
+    entity_id: light.desk_lamp
+    name: Desk Lamp
+  - platform: homeassistant_component
+    id: light_all_lights
+    entity_id: light.all_lights
+    name: All Lights
+  - platform: homeassistant_component
+    id: light_rgb_lights
+    entity_id: light.rgb_lights
+    name: Color Lights 
 
 display:
   - platform: tdisplays3
-    id: disp
-    update_interval: 1s
-    rotation: 270
+    id: my_display
+    rotation: 90
+    update_interval: 10s
     lambda: |-
-      it.printf(20, 70, id(roboto), Color(255, 0, 0), id(ha_time).now().strftime("%Y-%m-%d %H:%M:%S").c_str());
+      id(homeThingMenu)->draw_menu_screen();
+      return;
+
+cover:
+  - platform: homeassistant_component
+    entity_id: "cover.megadesk_cover"
+    name: "Megadesk"
+    id: cover_megadesk
+
+switch:
+  - platform: gpio
+    pin: GPIO15
+    name: "BacklightBattery"
+    id: backlightBattery
+    internal: true
+    restore_mode: ALWAYS_ON   
+
+homeThing:
+  id: homeThingMenu
+  settings:
+    sleep_after: 14400
+  # sleep_switch: sleep_toggle
+  backlight: backlight
+  header:
+    time_id: esptime
+  sleep_switch: sleep_toggle
+  battery:
+    battery_percent: battery_percent
+    charging: charging
+  media_player_group: media_group_component
+  display: my_display
+  on_redraw:
+    then:
+      component.update: my_display
+  display_state:
+    draw_battery_level: true
+    font_small: small_font
+    font_medium: medium_font
+    font_large: large_font
+    font_large_heavy: large_heavy_font
+    font_material_large: material_font_large
+    font_material_small: material_font_small
+    font_logo: home_thing_logo
+  screens:
+    - name: Desk Screen
+      entities:
+        - type: cover
+          id: cover_megadesk
+        - type: command
+          name: "desk nudge up"
+          command:
+            - homeassistant.service:
+                service: button.press
+                data:
+                  entity_id: "button.mega_homething_desk_position_nudge_up"
+        - type: command
+          name: "desk nudge down"
+          command:
+            - homeassistant.service:
+                service: button.press
+                data:
+                  entity_id: "button.mega_homething_desk_position_nudge_down"
+        - id: light_desk_lamp
+          type: light
+    - name: Lights Screen
+      entities:
+        - id: light_all_lights
+          type: light
+        - id: light_rgb_lights
+          type: light
+        - type: command
+          name: "color lights"
+          command:
+            - homeassistant.service:
+                service: script.colors
+        - type: command
+          name: "hell lights"
+          command:
+            - homeassistant.service:
+                service: scene.turn_on
+                data:
+                  entity_id: "scene.hell"
+        - type: command
+          name: "lights off"
+          command:
+            - homeassistant.service:
+                service: script.off_script
+    - name: Settings Screen
+      show_version: True
+      entities:
+        - id: backlight
+          type: light
+        - id: "restart_switch"
+          type: switch
+        - id: wifi_ssid
+          type: text_sensor
+        - id: wifi_signal_percent
+          type: sensor
+        - id: wifi_ip
+          type: text_sensor
