--- a/tdisplay-s3.yaml
+++ b/tdisplay-s3.yaml
@@ -31,20 +31,15 @@ wifi:
 
 external_components:
   - source:
-    #   type: git
-    #   url: https://github.com/landonr/homeThing
-    #   ref: main
-      type: local
-      path: ../homething/components
+      type: git
+      url: https://github.com/landonr/homeThing
+      ref: main
     refresh: 0s
     components: [homeThing]
   - source:
-    #   type: git
-    #   url: https://github.com/landonr/esphome-components
-    #   ref: main
-    # refresh: 0s
-      type: local
-      path: ../local_components/components
+      type: git
+      url: https://github.com/landonr/esphome-components
+      ref: main
     refresh: 0s
     components: [
       homeassistant_component,
@@ -56,18 +51,24 @@ external_components:
     ]
   - source: github://landonr/lilygo-tdisplays3-esphome
     components: [tdisplays3]
-
-packages:
-  device_base: !include ../homeThing/common/device_base.yaml
-  settings: !include ../homeThing/common/settings.yaml
-  home_media_player: !include ../homeThing/homeConfig/media_player.yaml
-  home_switch: !include ../homeThing/homeConfig/switch.yaml
-  fonts: !include ../homeThing/common/fonts.yaml
-  icon_fonts: !include ../homeThing/common/icon_fonts.yaml
-  ipod_control_binary_sensor: !include ../homeThing/common/ipod/lilygo_tdisplay_ipod_binary_sensor.yaml
-  ipod_control_rotary: !include ../homeThing/common/ipod/lilygo_tdisplay_ipod_rotary.yaml
-  ipod_control_battery: !include ../homeThing/common/ipod/lilygo_tdisplay_ipod_battery.yaml
-  ipod_control_sleep: !include ../homeThing/common/ipod/lilygo_tdisplay_ipod_sleep.yaml
+    refresh: 0s
+  
+packages: # maybe modify: include default ipod controls
+  remote_package:
+    url: https://github.com/landonr/homeThing
+    ref: main
+    files: [
+      common/device_base.yaml, # defines api, ota, free memory and uptime sensor
+      common/ipod/lilygo_tdisplay_ipod_battery.yaml, # used for battery percent
+      common/ipod/lilygo_tdisplay_ipod_binary_sensor.yaml, # used for button controls
+      common/ipod/lilygo_tdisplay_ipod_rotary.yaml, # used for rotary controls
+      common/ipod/lilygo_tdisplay_ipod_sleep.yaml, # required for device to sleep
+      common/tdisplay-s3/backlight.yaml, # backlight
+      common/fonts.yaml, # default font
+      common/icon_fonts.yaml, # material icons
+      common/settings.yaml # settings screen
+    ]
+    refresh: 0s
 
 substitutions:
   friendly_name: "s3 homething"
@@ -82,18 +83,13 @@ substitutions:
   screen_right_pin: "GPIO14"
   battery_pin: "4"
 
-output:
-  - platform: ledc
-    pin: GPIO38
-    id: gpio38
-    frequency: 2000
+color: # setup primary accent color
+  - id: my_primary_accent
+    red_int: 75
+    green_int: 45
+    blue_int: 209
 
-light:
-  - platform: monochromatic
-    output: gpio38
-    name: "Backlight"
-    id: backlight
-    restore_mode: RESTORE_DEFAULT_ON
+light: # home assistant lights
   - platform: homeassistant_component
     id: light_desk_lamp
     entity_id: light.desk_lamp
@@ -102,43 +98,56 @@ light:
     id: light_all_lights
     entity_id: light.all_lights
     name: All Lights
+
+media_player_source_sonos: # sonos favorite source
+  id: sonos
+
+media_player: # home assistant media players
+  - platform: homeassistant_media_player
+    name: Beam
+    entity_id: "media_player.beam"
+    id: media_player_beam
+    type: speaker
+    sources:
+      - id: sonos
+        type: sonos
+  - platform: homeassistant_media_player
+    name: TV
+    entity_id: "media_player.55_tcl_roku_tv"
+    id: media_player_tv
+    type: roku
+    soundbar:
+      speaker: media_player_beam
+
+homeassistant_media_player: # media player menu
+  id: media_group_component
+  media_players:
+    - id: media_player_beam
+      type: speaker
+    - id: media_player_tv
+      type: roku
+
+number: # home assistant number
   - platform: homeassistant_component
-    id: light_rgb_lights
-    entity_id: light.rgb_lights
-    name: Color Lights 
+    entity_id: number.desk_height_cm
+    name: desk height
+    id: desk_height_number
+    min_value: 61.0
+    max_value: 105.0
+    step: 1
 
-display:
-  - platform: tdisplays3
-    id: my_display
-    rotation: 90
-    update_interval: 10s
-    lambda: |-
-      id(homeThingMenu)->draw_menu_screen();
-      return;
-
-cover:
+cover: # home assistant cover
   - platform: homeassistant_component
     entity_id: "cover.megadesk_cover"
     name: "Megadesk"
     id: cover_megadesk
 
-switch:
-  - platform: gpio
-    pin: GPIO15
-    name: "BacklightBattery"
-    id: backlightBattery
-    internal: true
-    restore_mode: ALWAYS_ON   
-
 homeThing:
   id: homeThingMenu
   settings:
     sleep_after: 14400
-  # sleep_switch: sleep_toggle
-  backlight: backlight
-  header:
-    time_id: esptime
   sleep_switch: sleep_toggle
+  backlight: backlight
   battery:
     battery_percent: battery_percent
     charging: charging
@@ -148,6 +157,8 @@ homeThing:
     then:
       component.update: my_display
   display_state:
+    colors:
+      accent_primary: my_primary_accent
     draw_battery_level: true
     font_small: small_font
     font_medium: medium_font
@@ -161,40 +172,33 @@ homeThing:
       entities:
         - type: cover
           id: cover_megadesk
+        - type: number
+          id: desk_height_number
         - type: command
           name: "desk nudge up"
           command:
             - homeassistant.service:
                 service: button.press
                 data:
-                  entity_id: "button.mega_homething_desk_position_nudge_up"
+                  entity_id: "button.desk_position_nudge_up"
         - type: command
           name: "desk nudge down"
           command:
             - homeassistant.service:
                 service: button.press
                 data:
-                  entity_id: "button.mega_homething_desk_position_nudge_down"
+                  entity_id: "button.desk_position_nudge_down"
         - id: light_desk_lamp
           type: light
     - name: Lights Screen
       entities:
         - id: light_all_lights
           type: light
-        - id: light_rgb_lights
-          type: light
         - type: command
           name: "color lights"
           command:
             - homeassistant.service:
                 service: script.colors
-        - type: command
-          name: "hell lights"
-          command:
-            - homeassistant.service:
-                service: scene.turn_on
-                data:
-                  entity_id: "scene.hell"
         - type: command
           name: "lights off"
           command:
@@ -213,3 +217,12 @@ homeThing:
           type: sensor
         - id: wifi_ip
           type: text_sensor
+
+display:
+  - platform: tdisplays3
+    id: my_display
+    rotation: 90
+    update_interval: 10s
+    lambda: |-
+      id(homeThingMenu)->draw_menu_screen();
+      return;
