update devices to be examples (#65)
* move my home stuff into its own repo, change all devices to examples

* update script and action

* rename lilygo to tdisplay-s3

* remove homeConfig from action

* add back megadesk.h

* format megadesk

* add s3 package

--- a/tdisplay-t4.yaml
+++ b/tdisplay-t4.yaml
@@ -15,22 +15,18 @@ wifi:
     ssid: "${friendly_name} Fallback"
     password: !secret wifi_fallback_password
 
-external_components:
+external_components: #include homething, and esphome-components
   - source:
-    #   type: git
-    #   url: https://github.com/landonr/homeThing
-    #   ref: main
-    # refresh: 0s
-      type: local
-      path: components
+      type: git
+      url: https://github.com/landonr/homeThing
+      ref: main
+    refresh: 0s
     components: [homeThing]
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
       ref: main
     refresh: 0s
-      # type: local
-      # path: ../local_components/components
     components: [
       homeassistant_component,
       homeassistant_media_player,
@@ -40,14 +36,18 @@ external_components:
       media_player_source_custom
     ]
 
-packages:
-  device_base: !include common/device_base.yaml
-  home_media_player: !include homeConfig/media_player.yaml
-  home_text_sensor: !include homeConfig/text_sensor.yaml
-  home_light: !include homeConfig/light.yaml
-  home_switch: !include homeConfig/switch.yaml
-  fonts: !include common/fonts.yaml
-  icon_fonts: !include common/icon_fonts.yaml
+
+packages: # maybe modify: include default ipod controls
+  remote_package:
+    url: https://github.com/landonr/homeThing
+    ref: main
+    files: [
+      common/device_base.yaml, # defines api, ota, free memory and uptime sensor
+      common/fonts.yaml, # default font
+      common/icon_fonts.yaml, # material icons
+      common/settings.yaml # settings screen
+    ]
+    refresh: 0s
 
 substitutions:
   friendly_name: "tdisplayT4"
@@ -158,17 +158,78 @@ spi:
   miso_pin: 12
   mosi_pin: 23
 
+color: # setup primary accent color
+  - id: my_primary_accent
+    red_int: 75
+    green_int: 45
+    blue_int: 209
+
+light: # home assistant lights
+  - platform: homeassistant_component
+    id: light_desk_lamp
+    entity_id: light.desk_lamp
+    name: Desk Lamp
+  - platform: homeassistant_component
+    id: light_all_lights
+    entity_id: light.all_lights
+    name: All Lights
+
+media_player_source_sonos: # sonos favorite source
+  id: sonos
+
+media_player: # home assistant media players
+  - platform: homeassistant_media_player
+    name: Beam
+    entity_id: "media_player.beam"
+    id: media_player_beam
+    type: speaker
+    sources:
+      - id: sonos
+        type: sonos
+  - platform: homeassistant_media_player
+    name: TV
+    entity_id: "media_player.55_tcl_roku_tv"
+    id: media_player_tv
+    type: roku
+    soundbar:
+      speaker: media_player_beam
+
+homeassistant_media_player: # media player menu
+  id: media_group_component
+  media_players:
+    - id: media_player_beam
+      type: speaker
+    - id: media_player_tv
+      type: roku
+
+number: # home assistant number
+  - platform: homeassistant_component
+    entity_id: number.desk_height_cm
+    name: desk height
+    id: desk_height_number
+    min_value: 61.0
+    max_value: 105.0
+    step: 1
+
+cover: # home assistant cover
+  - platform: homeassistant_component
+    entity_id: "cover.megadesk_cover"
+    name: "Megadesk"
+    id: cover_megadesk
+
 homeThing:
   id: homeThingMenu
   settings:
-    mode: 3_button
-    display_timeout: 0
+    sleep_after: 14400
   media_player_group: media_group_component
   display: my_display
   on_redraw:
     then:
       component.update: my_display
   display_state:
+    colors:
+      accent_primary: my_primary_accent
+    draw_battery_level: true
     font_small: small_font
     font_medium: medium_font
     font_large: large_font
@@ -176,16 +237,54 @@ homeThing:
     font_material_large: material_font_large
     font_material_small: material_font_small
     font_logo: home_thing_logo
-    header_height: 24
-    margin_size: 8
-    slider_margin_size: 6
-    scroll_bar_width: 8
-    bottom_bar_margin: 8
-    now_playing_max_lines: 10
-    draw_now_playing_bottom_menu: true
-    dark_mode: true
-    draw_volume_level: false
-    draw_header_time: true
+  screens:
+    - name: Desk Screen
+      entities:
+        - type: cover
+          id: cover_megadesk
+        - type: number
+          id: desk_height_number
+        - type: command
+          name: "desk nudge up"
+          command:
+            - homeassistant.service:
+                service: button.press
+                data:
+                  entity_id: "button.desk_position_nudge_up"
+        - type: command
+          name: "desk nudge down"
+          command:
+            - homeassistant.service:
+                service: button.press
+                data:
+                  entity_id: "button.desk_position_nudge_down"
+        - id: light_desk_lamp
+          type: light
+    - name: Lights Screen
+      entities:
+        - id: light_all_lights
+          type: light
+        - type: command
+          name: "color lights"
+          command:
+            - homeassistant.service:
+                service: script.colors
+        - type: command
+          name: "lights off"
+          command:
+            - homeassistant.service:
+                service: script.off_script
+    - name: Settings Screen
+      show_version: True
+      entities:
+        - id: "restart_switch"
+          type: switch
+        - id: wifi_ssid
+          type: text_sensor
+        - id: wifi_signal_percent
+          type: sensor
+        - id: wifi_ip
+          type: text_sensor
 
 display:
   - platform: ili9xxx
