--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -1,6 +1,6 @@
 esphome:
-  name: "white-homething"
-  on_boot:
+  name: "homething-ipod"
+  on_boot: # sleep if theres no wifi after 45s
     priority: 600.0
     then:
       - delay: 45s
@@ -14,29 +14,25 @@ esphome:
 esp32:
   board: featheresp32
 
-wifi:
+wifi: # setup wifi, make sure secrets.yaml exists!
   ssid: !secret wifi_ssid
   password: !secret wifi_password
   fast_connect: true
   id: wifi_id
   power_save_mode: HIGH
 
-external_components:
+external_components: #include homething, and esphome-components
   - source:
-    #   type: git
-    #   url: https://github.com/landonr/homeThing
-    #   ref: main
-      type: local
-      path: components
+      type: git
+      url: https://github.com/landonr/homeThing
+      ref: main
     refresh: 0s
     components: [homeThing]
   - source:
-    #   type: git
-    #   url: https://github.com/landonr/esphome-components
-    #   ref: main
-    # refresh: 0s
-      type: local
-      path: ../local_components/components
+      type: git
+      url: https://github.com/landonr/esphome-components
+      ref: main
+    refresh: 0s
     components: [
       homeassistant_component,
       homeassistant_media_player,
@@ -46,30 +42,38 @@ external_components:
       media_player_source_custom
     ]
 
-packages:
-  device_base: !include common/device_base.yaml
-  # settings: !include common/settings.yaml
-  ipod_control_backlight: !include common/ipod/lilygo_tdisplay_ipod_backlight.yaml
-  ipod_control_battery: !include common/ipod/lilygo_tdisplay_ipod_battery.yaml
-  ipod_control_binary_sensor: !include common/ipod/lilygo_tdisplay_ipod_binary_sensor.yaml
-  ipod_control_rotary: !include common/ipod/lilygo_tdisplay_ipod_rotary.yaml
-  ipod_control_sleep: !include common/ipod/lilygo_tdisplay_ipod_sleep.yaml
-  home_media_player: !include homeConfig/media_player.yaml
-  home_switch: !include homeConfig/switch.yaml
-  fonts: !include common/fonts-light.yaml
-  icon_fonts: !include common/icon_fonts.yaml
-  debug: !include common/debugging.yaml
 
-substitutions:
-  friendly_name: "white homething"
+packages: # maybe modify: include default ipod controls
+  remote_package:
+    url: https://github.com/landonr/homeThing
+    ref: main
+    files: [
+      common/device_base.yaml, # defines api, ota, free memory and uptime sensor
+      common/ipod/lilygo_tdisplay_ipod_backlight.yaml, # used for toggling backlight
+      common/ipod/lilygo_tdisplay_ipod_battery.yaml, # used for battery percent
+      common/ipod/lilygo_tdisplay_ipod_binary_sensor.yaml, # used for button controls
+      common/ipod/lilygo_tdisplay_ipod_rotary.yaml, # used for rotary controls
+      common/ipod/lilygo_tdisplay_ipod_sleep.yaml, # required for device to sleep
+      common/fonts.yaml, # default font
+      common/icon_fonts.yaml, # material icons
+      common/settings.yaml # settings screen
+    ]
+    refresh: 0s
 
-color:
+spi:
+  clk_pin: GPIO18
+  mosi_pin: GPIO19
+
+substitutions: # set friendly name
+  friendly_name: "homething-ipod"
+
+color: # setup primary accent color
   - id: my_primary_accent
     red_int: 75
     green_int: 45
     blue_int: 209
 
-light:
+light: # home assistant lights
   - platform: homeassistant_component
     id: light_desk_lamp
     entity_id: light.desk_lamp
@@ -78,10 +82,49 @@ light:
     id: light_all_lights
     entity_id: light.all_lights
     name: All Lights
+
+media_player_source_sonos: # sonos favorite source
+  id: sonos
+
+media_player: # home assistant media players
+  - platform: homeassistant_media_player
+    name: Beam
+    entity_id: "media_player.beam"
+    id: media_player_beam
+    type: speaker
+    sources:
+      - id: sonos
+        type: sonos
+  - platform: homeassistant_media_player
+    name: TV
+    entity_id: "media_player.55_tcl_roku_tv"
+    id: media_player_tv
+    type: roku
+    soundbar:
+      speaker: media_player_beam
+
+homeassistant_media_player: # media player menu
+  id: media_group_component
+  media_players:
+    - id: media_player_beam
+      type: speaker
+    - id: media_player_tv
+      type: roku
+
+number: # home assistant number
   - platform: homeassistant_component
-    id: light_rgb_lights
-    entity_id: light.rgb_lights
-    name: Color Lights 
+    entity_id: number.desk_height_cm
+    name: desk height
+    id: desk_height_number
+    min_value: 61.0
+    max_value: 105.0
+    step: 1
+
+cover: # home assistant cover
+  - platform: homeassistant_component
+    entity_id: "cover.megadesk_cover"
+    name: "Megadesk"
+    id: cover_megadesk
 
 homeThing:
   id: homeThingMenu
@@ -89,8 +132,6 @@ homeThing:
     sleep_after: 14400
   sleep_switch: sleep_toggle
   backlight: backlight
-  header:
-    time_id: esptime
   battery:
     battery_percent: battery_percent
     charging: charging
@@ -106,7 +147,7 @@ homeThing:
     font_small: small_font
     font_medium: medium_font
     font_large: large_font
-    font_large_heavy: large_font
+    font_large_heavy: large_heavy_font
     font_material_large: material_font_large
     font_material_small: material_font_small
     font_logo: home_thing_logo
@@ -115,6 +156,8 @@ homeThing:
       entities:
         - type: cover
           id: cover_megadesk
+        - type: number
+          id: desk_height_number
         - type: command
           name: "desk nudge up"
           command:
@@ -135,42 +178,29 @@ homeThing:
       entities:
         - id: light_all_lights
           type: light
-        - id: light_rgb_lights
-          type: light
         - type: command
           name: "color lights"
           command:
             - homeassistant.service:
                 service: script.colors
         - type: command
-          name: "hell lights"
-          command:
-            - homeassistant.service:
-                service: scene.turn_on
-                data:
-                  entity_id: "scene.hell"
-        - type: command
           name: "lights off"
           command:
             - homeassistant.service:
                 service: script.off_script
-    # - name: Settings Screen
-    #   show_version: True
-    #   entities:
-    #     - id: backlight
-    #       type: light
-    #     - id: "restart_switch"
-    #       type: switch
-    #     - id: wifi_ssid
-    #       type: text_sensor
-    #     - id: wifi_signal_percent
-    #       type: sensor
-    #     - id: wifi_ip
-    #       type: text_sensor
-
-spi:
-  clk_pin: GPIO18
-  mosi_pin: GPIO19
+    - name: Settings Screen
+      show_version: True
+      entities:
+        - id: backlight
+          type: light
+        - id: "restart_switch"
+          type: switch
+        - id: wifi_ssid
+          type: text_sensor
+        - id: wifi_signal_percent
+          type: sensor
+        - id: wifi_ip
+          type: text_sensor
 
 display:
   - platform: st7789v
@@ -184,10 +214,3 @@ display:
     lambda: |-
       id(homeThingMenu)->draw_menu_screen();
       return;
-
-cover:
-  - platform: homeassistant_component
-    entity_id: "cover.megadesk_cover"
-    name: "Megadesk"
-    id: cover_megadesk
-    
