--- a/m5stack-stickc.yaml
+++ b/m5stack-stickc.yaml
@@ -52,7 +52,7 @@ external_components: #include homething, and esphome-components
 packages: # maybe modify: include default ipod controls
   remote_package:
     url: https://github.com/landonr/homeThing
-    ref: example-devices
+    ref: main
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/fonts.yaml, # default font
