--- a/m5stack-stickcplus-rotary.yaml
+++ b/m5stack-stickcplus-rotary.yaml
@@ -32,7 +32,7 @@ external_components: #include homething, and esphome-components
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: main
+      ref: lando/july-bugs
     refresh: 0s
     components: [homeThing]
   - source:
