--- a/tdisplay-megadesk.yaml
+++ b/tdisplay-megadesk.yaml
@@ -31,7 +31,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: main
+      ref: lando/july-bugs
     refresh: 0s
     components: [homeThing]
   - source:
