--- a/tdisplay-s3.yaml
+++ b/tdisplay-s3.yaml
@@ -33,7 +33,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: main
+      ref: lando/july-bugs
     refresh: 0s
     components: [homeThing]
   - source:
