--- a/tdisplay-t4.yaml
+++ b/tdisplay-t4.yaml
@@ -19,7 +19,7 @@ external_components: #include homething, and esphome-components
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: lando/july-bugs
+      ref: main
     refresh: 0s
     components: [homeThing]
   - source:
