support showing entities on home screen

--- a/common/tdisplay-s3/backlight.yaml
+++ b/common/tdisplay-s3/backlight.yaml
@@ -9,4 +9,12 @@ light:
     output: gpio38
     name: "Backlight"
     id: backlight
-    restore_mode: RESTORE_DEFAULT_ON
+    restore_mode: ALWAYS_ON
+
+switch: # needed to turn on backlight while plugged into battery
+  - platform: gpio
+    pin: GPIO15
+    name: "BacklightBattery"
+    id: backlightBattery
+    internal: true
+    restore_mode: ALWAYS_ON
