--- a/common/m5stack-stickc/binary_sensor.yaml
+++ b/common/m5stack-stickc/binary_sensor.yaml
@@ -5,28 +5,37 @@ binary_sensor:
      inverted: true
    name: Button A
    on_press:
-     then:
-       lambda: |-
-           id(homeThingMenu)->buttonPressRight();
-           auto call = id(led1).turn_on();
-           call.set_transition_length(0);
-           call.perform();
+     - voice_assistant.start:
+     - lambda: |-
+          auto call = id(led1).turn_on();
+          call.set_transition_length(0);
+          call.perform();
    on_release:
-     then:
-       - light.turn_off: led1
+     - voice_assistant.stop:
+     - light.turn_off: led1
+  #  on_press:
+  #    then:
+  #      lambda: |-
+  #          id(homeThingMenu)->buttonPressRight();
+  #          auto call = id(led1).turn_on();
+  #          call.set_transition_length(0);
+  #          call.perform();
+  #  on_release:
+  #    then:
+  #      - light.turn_off: led1
        
- - platform: gpio
-   pin:
-     number: GPIO39
-     inverted: true
-   name: Button B
-   on_press:
-     then:
-       lambda: |-
-           id(homeThingMenu)->buttonPressSelect();
-           auto call = id(led1).turn_on();
-           call.set_transition_length(0);
-           call.perform();
-   on_release:
-     then:
-       - light.turn_off: led1
+#  - platform: gpio
+#    pin:
+#      number: GPIO39
+#      inverted: true
+#    name: Button B
+#    on_press:
+#      then:
+#        lambda: |-
+#            id(homeThingMenu)->buttonPressSelect();
+#            auto call = id(led1).turn_on();
+#            call.set_transition_length(0);
+#            call.perform();
+#    on_release:
+#      then:
+#        - light.turn_off: led1
