--- a/m5stack-fire.yaml
+++ b/m5stack-fire.yaml
@@ -46,6 +46,8 @@ external_components:
       media_player_source_spotify,
       media_player_source_custom
     ]
+  - source: github://pr#5214 # used to load images on compile
+    components: [ image ]
 
 packages: # maybe modify: include default ipod controls
   remote_package:
@@ -61,6 +63,7 @@ packages: # maybe modify: include default ipod controls
       common/m5stack-fire/binary_sensor.yaml, # buttons
       common/m5stack-fire/backlight.yaml, # backlight
       common/m5stack-fire/sidelight.yaml, # sidelight
+      common/images.yaml # boot screen image
     ]
     refresh: 0s
 
@@ -152,7 +155,7 @@ homeThing:
     font_large_heavy: large_heavy_font
     font_material_large: material_font_large
     font_material_small: material_font_small
-    font_logo: home_thing_logo
+    launch_image: launch_image
   screens:
     - name: Desk Screen
       entities:
