--- a/m5stack-stickc.yaml
+++ b/m5stack-stickc.yaml
@@ -48,6 +48,8 @@ external_components: #include homething, and esphome-components
       media_player_source_spotify,
       media_player_source_custom
     ]
+  - source: github://pr#5214 # used to load images on compile
+    components: [ image ]
 
 packages: # maybe modify: include default ipod controls
   remote_package:
@@ -60,7 +62,8 @@ packages: # maybe modify: include default ipod controls
       common/settings.yaml, # settings screen
       common/m5stack-stickc/axp192.yaml, # power management and screen backlight
       common/m5stack-stickc/sleep.yaml, # deep sleep
-      common/m5stack-stickc/binary_sensor.yaml # power management and screen backlight
+      common/m5stack-stickc/binary_sensor.yaml, # power management and screen backlight
+      common/images.yaml # boot screen image
     ]
     refresh: 0s
 
@@ -145,7 +148,7 @@ homeThing:
     font_large_heavy: large_heavy_font
     font_material_large: material_font_large
     font_material_small: material_font_small
-    font_logo: home_thing_logo
+    launch_image: launch_image
   screens:
     - name: Desk Screen
       entities:
