--- a/m5stack-stickcplus-rotary.yaml
+++ b/m5stack-stickcplus-rotary.yaml
@@ -51,6 +51,8 @@ external_components: #include homething, and esphome-components
     ]
   - source: github://pr#5214 # used to load images on compile
     components: [ image ]
+  - source: github://pr#5254 # used to load fonts on compile
+    components: [ font ]
 
 packages: # maybe modify: include default ipod controls
   remote_package:
