--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -44,7 +44,7 @@ external_components: #include homething, and esphome-components
   - source: github://pr#5214 # used to load images on compile
     components: [ image ]
   - source: github://pr#5254 # used to load fonts on compile
-    components: [ font ]
+    components: [ font, external_files ]
 
 
 packages: # maybe modify: include default ipod controls
@@ -156,6 +156,7 @@ homeThing:
     font_material_large: material_font_large
     font_material_small: material_font_small
     launch_image: launch_image
+    boot_device_name: "cool remote"
   screens:
     - name: Desk Screen
       entities:
