--- a/common/m5stack-stickc/MiniEncoderC.yaml
+++ b/common/m5stack-stickc/MiniEncoderC.yaml
@@ -11,10 +11,18 @@ MiniEncoderC:
     name: "${friendly_name} Rotary Button"
     id: rotary_button
     internal: True
-    on_press:
+    on_click:
+      min_length: 5ms
+      max_length: 350ms
       then:
-        - lambda: |-
-            id(homeThingMenu)->buttonPressSelect();
+      - lambda: |-
+          id(homeThingMenu)->buttonPressSelect();
+    on_multi_click:
+    - timing:
+        - ON for at least 0.5s
+      then:
+      - lambda: |-
+          id(homeThingMenu)->buttonPressSelectHold();
   encoder:
     name: "${friendly_name} Rotary Encoder"
     id: rotary
